Updated Sidebar styling for smaller screens and fixed issue with sidebar clipping into header. Updated HomePage for mobile

--- a/sports-spread/src/styles/HomePage.scss
+++ b/sports-spread/src/styles/HomePage.scss
@@ -96,5 +96,15 @@
    
 }
 @media(min-width: 568px) and (max-height: 414px){
-   
+    .home-page{
+        &::after{
+            height: 160vh;
+        }
+        .home-container{
+            height: 160vh;
+            .btn-container{
+                font-size: 2rem;
+            }
+        }
+    }
 }
