--- a/sports-spread/src/styles/Sidebar.scss
+++ b/sports-spread/src/styles/Sidebar.scss
@@ -51,7 +51,7 @@
                     align-items: center;
                     border-bottom: 3px solid $light-blue;
                     transition: all 250ms ease-in-out;
-                    font-size: 2.7rem;
+                    font-size: 1.75rem;
                     text-transform: uppercase;
 
                     &:hover{
@@ -76,19 +76,6 @@
                 }
             }
 
-        }
-        .img-container{
-            width: 100%;
-            height: 45%;
-            display: flex;
-            justify-content: flex-start;
-            align-items: flex-end;
-            align-self: flex-end;
-
-            img{
-                max-width: 250px;
-                height: auto;
-            }
         }
 
     }
@@ -148,13 +135,13 @@
     
 }
 @media screen and (min-width: 992px){
-    .sidebar{
-        top: $header-large;
-    }
+
 }
 @media screen and (min-width: 1200px){
     .sidebar{
         width: 400px;
+        top: $header-large;
+
         .sidebar-container{
             width: 100%;
             max-width: 400px;
@@ -169,23 +156,13 @@
                     max-width: 398px;
 
                     li{
-                        font-size: 1.5rem;
+                        font-size: 2.25rem;
                         height: 75px;
                         .nav{
                             max-width: 400px;
                         }
     
                     }
-                }
-            }
-
-            .img-container{
-                width: 100%;
-                height: 45%;
-    
-                img{
-                    max-width: 370px;
-                    height: auto;
                 }
             }
         }
